Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/SAP_Order_Sites__c.object-meta.xml
<CustomObject>
    <description>holds the site commitment info for orders</description>
    <label>PKI Order Sites</label>
    <nameField>
        <label>PKI Order Sites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKI Order Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>