Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/Current_Estimate_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Estimate_Date__c</fullName>
    <label>Current Estimate Date</label>
    <type>Date</type>
</CustomField>