Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/Early_Global_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Global_Delivery_Date__c</fullName>
    <label>Early Global Delivery Date</label>
    <type>Date</type>
</CustomField>