Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/idocid__c.field-meta.xml
<CustomField>
    <fullName>idocid__c</fullName>
    <inlineHelpText>the idoc that provided this data</inlineHelpText>
    <label>IDOC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>