Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <inlineHelpText>the order number as text</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>