Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/Original_Estimate_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Estimate_Date__c</fullName>
    <label>Original Estimate Date</label>
    <type>Date</type>
</CustomField>