Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/PKI_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>PKI_Order_Summary__c</fullName>
    <label>PKI Order Summary</label>
    <referenceTo>SAP_Order_Summary__c</referenceTo>
    <relationshipLabel>PKI Order Sites</relationshipLabel>
    <relationshipName>PKI_Order_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>