Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/SAP_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Last_Modified_Date__c</fullName>
    <inlineHelpText>the date we have from SAP as last modified</inlineHelpText>
    <label>SAP Last Modified Date</label>
    <type>Date</type>
</CustomField>