Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <inlineHelpText>the site name code</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>