Perkin-UAT/force-app/main/default/objects/SAP_Order_Sites__c/fields/Transit_to_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Transit_to_Consolidation__c</fullName>
    <label>Transit to Consolidation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>